--- a/rec_system.ipynb
+++ b/rec_system.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4w9NaX+Y6N4UBO6bUCJKt",
+      "authorship_tag": "ABX9TyNrLPtzFst/BKG+w0JW7uPV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,31 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/MyNameIsEldar/Movie_Recommender/blob/main/rec_system.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Movie Recommender\n",
+        "Recommendation System using deep learning\n",
+        "\n",
+        "##Task\n",
+        "\n",
+        "Required to build embeddings for each user and movie using **neural networks methods**. These embeddings will be used to find more relevant film for user.\n",
+        "\n",
+        "For this task will be used **full MovieLens dataset**."
+      ],
+      "metadata": {
+        "id": "gtyn9ItWBRvl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Imports"
+      ],
+      "metadata": {
+        "id": "eS846b2dBXoL"
+      }
     },
     {
       "cell_type": "code",
