Создано с помощью Colaboratory

--- a/rec_system.ipynb
+++ b/rec_system.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrLPtzFst/BKG+w0JW7uPV",
+      "authorship_tag": "ABX9TyPZIbL5sGRbVNkRI5YKtgk2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Movie Recommender\n",
+        "#🎥Movie Recommender🎥\n",
         "Recommendation System using deep learning\n",
         "\n",
-        "##Task\n",
+        "##✔️Task\n",
         "\n",
         "Required to build embeddings for each user and movie using **neural networks methods**. These embeddings will be used to find more relevant film for user.\n",
         "\n",
-        "For this task will be used **full MovieLens dataset**."
+        "For this task I will use **full MovieLens dataset**."
       ],
       "metadata": {
         "id": "gtyn9ItWBRvl"
@@ -45,7 +45,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Imports"
+        "##📑Imports"
       ],
       "metadata": {
         "id": "eS846b2dBXoL"
