--- a/rec_system.ipynb
+++ b/rec_system.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZIbL5sGRbVNkRI5YKtgk2",
+      "authorship_tag": "ABX9TyP3Vww3AdYQ9zzv/BBxO1Ma",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#🎥Movie Recommender🎥\n",
+        "#🎥Movie Recommender\n",
         "Recommendation System using deep learning\n",
         "\n",
-        "##✔️Task\n",
+        "##✔️Introduction\n",
         "\n",
         "Required to build embeddings for each user and movie using **neural networks methods**. These embeddings will be used to find more relevant film for user.\n",
         "\n",
-        "For this task I will use **full MovieLens dataset**."
+        "Solvig this task I will use the DFM. Deep Factorization Machines (DFM) - is a multi-layer neural network to model the user and item latent factors.\n",
+        "\n",
+        "DMF can be trained using backpropagation and can handle missing data.\n",
+        "\n",
+        "For this task I will use the **full MovieLens 20M dataset**.\n"
       ],
       "metadata": {
         "id": "gtyn9ItWBRvl"
@@ -53,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "id": "pN5ZuxCO_osz"
       },
@@ -61,13 +65,17 @@
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
+        "import os\n",
+        "from tqdm.notebook import tqdm\n",
         "\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "from sklearn.metrics import mean_squared_error"
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "\n",
+        "from sklearn.metrics import mean_squared_error, roc_auc_score"
       ]
     },
     {
